--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,25 @@
-html, 
+html,
 body{
     margin-left: auto;
     margin-right: auto;
+    height:100vh;}
+
+body{
+    background-color: white;
 }
 
 .header{
     text-align:center;
     margin: auto;
+    background-color: white;
+    max-width: 750px;
 }
 
 .main-container{
-    max-width: 700px;
+    max-width: 750px;
     margin:auto;
+    height: 100%;
+    background-color: white;
 }
 
 .instructions-container,
@@ -19,15 +27,21 @@ body{
 .submit-container{
     text-align:center;
     margin: auto;
-    padding-bottom: 10px;
+    /* padding: 10px; */
 }
 
 .questions-container{
-    display:flex;
-    visibility: hidden;
+    display:none;
+    /* visibility: hidden; */
     text-align: left;
     margin: 20px;
-    padding: 10px;
+    /* padding: 10px; */
+}
+
+.submit-container{
+    display:none;
+    margin:10px;
+    margin-bottom: 30px;
 }
 
 .cheat-mode-container{
@@ -41,4 +55,24 @@ body{
 .btn{
     margin-left: 2px;
     margin-right: 2px;
+}
+
+/* scroll bar */
+
+body::-webkit-scrollbar {
+    width: 1em;
+}
+ 
+body::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    box-shadow: 0ch;
+}
+ 
+body::-webkit-scrollbar-thumb {
+  background-color: darkgrey;
+  outline: 1px solid slategrey;
+}
+
+#start{
+    margin:10px;
 }
