--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,7 @@
         text-align:center;
         margin: auto;
         max-width: 100%;
+        margin-bottom: 20px
     }
     
     .main-container{
@@ -22,6 +23,7 @@
         text-align:center;
         margin: auto;
         max-width: 500px;
+        margin-bottom: 20px
     }
     
     .main-container{
@@ -38,6 +40,7 @@
         text-align:center;
         margin: auto;
         max-width: 800px;
+        margin-bottom: 20px
     }
     
     .main-container{
@@ -60,6 +63,7 @@ body{
     text-align:center;
     margin: auto;
     max-width: 800px;
+    margin-bottom: 20px
 }
 
 .main-container{
@@ -118,6 +122,7 @@ body{
     margin-right: 2px;
 }
 
+/* smileys */
 .fa-grin-wink{
     color: green;
 }
