--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,7 @@
         min-height: 100vh;
         background-color: white;
     }
+
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
@@ -118,8 +119,7 @@ body{
 }
 
 .btn{
-    margin-left: 2px;
-    margin-right: 2px;
+    margin: 5px;
 }
 
 /* smileys */
